--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "fakerphp/faker": "^1.23",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.0",
-        "fakerphp/faker": "^1.23"
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "livewire/flux": "^2.0"
     },
     "require-dev": {
         "laravel/pail": "^1.2.2",
