--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "livewire/flux": "^2.0"
+        "livewire/flux": "^2.0",
+        "openai-php/laravel": "^0.11.0"
     },
     "require-dev": {
         "laravel/pail": "^1.2.2",
