--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/flux": "^2.0",
+        "opcodesio/log-viewer": "^3.15",
         "openai-php/laravel": "^0.11.0"
     },
     "require-dev": {
