--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "erusev/parsedown": "^1.7",
         "fakerphp/faker": "^1.23",
         "lab404/laravel-impersonate": "^1.7",
+        "laravel/cashier": "^15.6",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
